# gazebo_actor_spawner

./: .gitignore  APPENDIX_D_SOFTWARE_ARTIFACT.md  README.md  package.xml  run_it.sh  setup.cfg  setup.py
gazebo_actor_spawner/: gazebo_actor_relay.py  spawn_actors.py
install/: local_setup.sh  setup.sh
install/gazebo_actor_spawner/lib/gazebo_actor_spawner/: spawn_actors
install/gazebo_actor_spawner/share/gazebo_actor_spawner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: view_actors.launch.py
log/: latest_build
models/walking_human/: model.config
rviz/: actor_view.rviz
scripts/: spawn_actors
src/gazebo_actor_spawner/: gazebo_actor_relay.py  spawn_actors.py
urdf/: dummy_robot.urdf
visuals/: input.mmd
worlds/: empty.sdf
